[gd_scene load_steps=14 format=3 uid="uid://b0w5t6ly2ty46"]

[ext_resource type="Script" path="res://tscn_files/HUD.gd" id="1_uost2"]
[ext_resource type="FontFile" uid="uid://chtiluc2ukomy" path="res://PixelifySans-VariableFont_wght.ttf" id="2_lg15j"]
[ext_resource type="Texture2D" uid="uid://6pf06no5p0qn" path="res://spritesheets/play.png" id="3_xbfuq"]
[ext_resource type="Texture2D" uid="uid://bnvo43pxpi8cs" path="res://spritesheets/pause.png" id="4_e1dug"]
[ext_resource type="Texture2D" uid="uid://cuqohtr42upej" path="res://spritesheets/sound_on.png" id="5_8sbd8"]
[ext_resource type="Texture2D" uid="uid://bljyf0aeecxcx" path="res://spritesheets/sound_off.png" id="6_5cvqe"]
[ext_resource type="PackedScene" uid="uid://drgltxkcmhn11" path="res://tscn_files/health.tscn" id="7_5um6e"]

[sub_resource type="InputEventAction" id="InputEventAction_wvita"]
action = &"Start"

[sub_resource type="Shortcut" id="Shortcut_4nmeb"]
events = [SubResource("InputEventAction_wvita")]

[sub_resource type="InputEventKey" id="InputEventKey_w44ao"]
device = -1
keycode = 80
unicode = 112

[sub_resource type="Shortcut" id="Shortcut_tqmwl"]
events = [SubResource("InputEventKey_w44ao")]

[sub_resource type="InputEventKey" id="InputEventKey_pvgm4"]
device = -1
keycode = 77
unicode = 109

[sub_resource type="Shortcut" id="Shortcut_0ragp"]
events = [SubResource("InputEventKey_pvgm4")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_uost2")

[node name="Message" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -232.0
offset_top = 59.0
offset_right = 233.0
offset_bottom = 279.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 1
theme_override_fonts/font = ExtResource("2_lg15j")
theme_override_font_sizes/font_size = 36
text = "DEFEAT THE BANDITS! USE ARROW KEYS TO MOVE WASD to attack SPACE to jump PRESS ANY KEY TO START"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="Score" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -99.0
offset_bottom = 37.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_lg15j")
theme_override_font_sizes/font_size = 24
text = "Score:"

[node name="Button" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.424
anchor_top = 0.787
anchor_right = 0.424
anchor_bottom = 0.787
offset_left = -103.448
offset_top = -45.976
offset_right = 72.552
offset_bottom = 49.024
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_lg15j")
theme_override_font_sizes/font_size = 25
shortcut = SubResource("Shortcut_4nmeb")
text = "START"
metadata/_edit_use_anchors_ = true

[node name="Controls" type="Button" parent="."]
anchors_preset = -1
anchor_left = 0.616
anchor_top = 0.799
anchor_right = 0.616
anchor_bottom = 0.799
offset_left = -87.6321
offset_top = -53.752
offset_right = 88.3679
offset_bottom = 41.248
theme_override_constants/outline_size = 3
theme_override_fonts/font = ExtResource("2_lg15j")
theme_override_font_sizes/font_size = 26
text = "CONTROLS"

[node name="pause_button" type="TextureButton" parent="."]
offset_left = 568.0
offset_top = 13.0
offset_right = 668.0
offset_bottom = 113.0
toggle_mode = true
shortcut = SubResource("Shortcut_tqmwl")
texture_normal = ExtResource("4_e1dug")
texture_pressed = ExtResource("3_xbfuq")

[node name="music_button" type="TextureButton" parent="."]
modulate = Color(20, 20, 20, 1)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -44.0
offset_right = 44.0
grow_vertical = 0
toggle_mode = true
shortcut = SubResource("Shortcut_0ragp")
texture_normal = ExtResource("5_8sbd8")
texture_pressed = ExtResource("6_5cvqe")

[node name="health" parent="." instance=ExtResource("7_5um6e")]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Controls" to="." method="_on_controls_pressed"]
[connection signal="toggled" from="pause_button" to="." method="_on_pause_button_toggled"]
[connection signal="toggled" from="music_button" to="." method="_on_music_button_toggled"]
